--- a/plantsuwa/app/views/layouts/application.html.erb
+++ b/plantsuwa/app/views/layouts/application.html.erb
@@ -21,8 +21,10 @@
 
     <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
     <% if @admin_page %>
-      <%= stylesheet_link_tag    "admin-pages", media: "all", "data-turbolinks-track" => true %>
+      <%= stylesheet_link_tag  "admin-pages", media: "all", "data-turbolinks-track" => true %>
     <% end %>
+    <%= stylesheet_link_tag    "media-queries", media: "all", "data-turbolinks-track" => true %>
+
 
   	<!-- Google Fonts -->
   	<link href='http://fonts.googleapis.com/css?family=Montserrat|Oxygen|Noto+Sans|Nunito' rel='stylesheet' type='text/css'>
