--- a/plantsuwa/app/views/climates/_form.html.erb
+++ b/plantsuwa/app/views/climates/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for(@climate, html: { class: 'form-horizontal' }) do |f| %>
+<%= simple_form_for(@climate, html: { class: 'form-horizontal' , :'accept-charset' => "UTF-8"}, defaults: { input_html: { class: 'form-control' } }) do |f| %>
   <% if @climate.errors.any? %>
   <div id="error_explanation">
     <h2><%= pluralize(@climate.errors.count, "error") %> prohibited this climate from being saved:</h2>
