--- a/plantsuwa/app/views/climates/index.html.erb
+++ b/plantsuwa/app/views/climates/index.html.erb
@@ -2,24 +2,24 @@
 <% provide(:prev_page, 'Admin') %>
 <% provide(:prev_link, root_path) %> <!-- Change later -->
 
-<h1>Listing Climates</h1>
 
-<%= link_to 'New Climate', new_climate_path %>
+	<h1 class="h1-shrink">All Climates<span class="item-counter">(<%= @climates.count %>)</span></h1>
+		<%= link_to '<i class="fa fa-plus"></i>&nbsp;&nbsp;New Climate'.html_safe, new_climate_path, class: 'btn btn-orange button-shrink', style: 'float: right; margin-top: -45px'%>
+<hr/>
 
-<table>
-	<tr>
-		<th>ID</th>
-		<th>Name</th>
-	</tr>
+
+<table class="table table-striped table-responsive">
+	<thead>
+		<tr>
+			<th style="width: 5%">ID</th>
+			<th>Name</th>
+			<th style="width: 90px;" class="th-shrink"></th>
+			<th style="width: 90px;" class="th-shrink"></th>
+		</tr>
+	</thead>
 	
-	<% @climates.each do |climate| %>
-	<tr>
-		<td>#<%= climate.id %></td>
-		<td><%= climate.name %></td>
-		<td><%= link_to 'Edit', edit_climate_path(climate) %></td>
-		<td><%= link_to 'Delete', climate_path(climate), method: :delete, data: { confirm: 'WARNING: Are you sure you want to DELETE this Climate? Doing so will affect all plants with this climate!'} %></td>
-	</tr>
-	<% end %>
+	<%= render @climates %>
 </table>
-<br>
-<strong>Total Number of Climates: </strong><%= @climates.count %>
+
+
+<%= render 'layouts/bottom_tabs_admin' %>
