--- a/plantsuwa/app/views/climates/new.html.erb
+++ b/plantsuwa/app/views/climates/new.html.erb
@@ -1,4 +1,9 @@
-<h1>New Climate</h1>
+<% provide(:title, 'New Climate') %>
+<% provide(:prev_page, 'Climates') %>
+<% provide(:prev_link, climates_path) %>
+
+<h1 class="h1-shrink">New Climate</h1>
+<hr/>
  
 <%= render 'form' %>
  
