--- a/plantsuwa/app/views/climates/_climate.html.erb
+++ b/plantsuwa/app/views/climates/_climate.html.erb
@@ -7,7 +7,7 @@
 	<% end %>
 
 	</td>
-	<td class="td-shrink"><%= link_to climate_path(climate), method: :delete, data: { confirm: 'WARNING: Are you sure you want to DELETE this Climate? Doing so will affect all plants with this climate!'} do %>
+	<td class="td-shrink"><%= link_to climate_path(climate), method: :delete, data: { confirm: 'WARNING: Are you sure you want to DELETE this climate? Doing so will affect all plants with this climate!'} do %>
 		<i class="fa fa-trash"></i><span class="over-400">&nbsp;&nbsp;Delete</span>
 	<% end %>
 	</td>
