--- a/plantsuwa/app/assets/stylesheets/custom.css
+++ b/plantsuwa/app/assets/stylesheets/custom.css
@@ -484,3 +484,74 @@ textarea {
   max-width: 50%;
   max-height: 50%;
 }
+
+.colour-circle {
+  float: left;
+  margin-top: 2px;
+  margin-right: 8px;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  background: white;
+}
+
+.circle-large {
+  float: none;
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+}
+
+
+
+
+/* Media Queries */
+
+@media (max-width: 768px) {
+  .over-768 {
+    display: none;  
+  }
+}
+
+
+@media (min-width: 300px) {
+  body {
+    overflow-x: hidden;
+  }
+}
+
+@media (max-width: 400px) {
+  .navbar p {
+    font-size: 90%;
+  }
+
+  .th-shrink, .td-shrink {
+    width: 30px !important;
+  }
+
+  .over-400 {
+    display: none;
+  }
+
+}
+
+
+@media (min-width: 768px) {
+  .navbar-right {
+    position: fixed;
+    right: 90px;
+  }
+  .navbar-brand {
+    margin-left: -10px !important;
+  }
+  .navbar-brand-custom {
+    padding-left: 18px !important;    
+  }
+
+  .navbar-title-block p {
+      right: 200px;
+  }
+  .under-768 {
+    display: none;
+  }
+}
