--- a/plantsuwa/app/views/admin_pages/_other_tables_list.html.erb
+++ b/plantsuwa/app/views/admin_pages/_other_tables_list.html.erb
@@ -1,10 +1,14 @@
 
 <% if controller_name != "notifications" %>  
   <li><%= link_to 'Notifications', notifications_path %></li>
+<% else %>
+  <li class="li-current">Notifications</li>
 <% end %>
 
 <% if controller_name != "users" %>
   <li><%= link_to 'Users', users_path %></li>
+<% else %>
+  <li class="li-current">Users</li>
 <% end %>
 
 <div class="under-768"><li class="divider"></li></div>
@@ -12,30 +16,51 @@
 
 <li><%= link_to 'Plants', current_plants_path %></li>
 
+<% if controller_name != "current_photos" %>
+  <li><%= link_to 'Photos', types_path %></li>
+<% else %>
+  <li class="li-current">Photos</li>
+<% end %>
+
 <% if controller_name != "climates" %>
   <li><%= link_to 'Climates', climates_path %></li>
+<% else %>
+  <li class="li-current">Climates</li>
 <% end %>
 
 <% if controller_name != "flower_colours" %>
   <li><%= link_to 'Flower Colours', flower_colours_path %></li>
+<% else %>
+  <li class="li-current">Flower Colours</li>
 <% end %>
 
 <% if controller_name != "leaf_colours" %>
   <li><%= link_to 'Leaf Colours', leaf_colours_path %></li>
+<% else %>
+  <li class="li-current">Leaf Colours</li>
 <% end %>
 
 <% if controller_name != "origins" %>
   <li><%= link_to 'Origins', origins_path %></li>
+<% else %>
+  <li class="li-current">Origins</li>
 <% end %>
 
 <% if controller_name != "sizes" %>
   <li><%= link_to 'Sizes', sizes_path %></li>
+<% else %>
+  <li class="li-current">Sizes</li>
 <% end %>
 
 <% if controller_name != "soil_types" %>
   <li><%= link_to 'Soil Types', soil_types_path %></li>
+<% else %>
+  <li class="li-current">Soil Types</li>
 <% end %>
 
 <% if controller_name != "types" %>
   <li><%= link_to 'Types', types_path %></li>
+<% else %>
+  <li class="li-current">Types</li>
 <% end %>
+
