--- a/plantsuwa/app/views/flower_colours/_form.html.erb
+++ b/plantsuwa/app/views/flower_colours/_form.html.erb
@@ -1,7 +1,8 @@
-<%= simple_form_for(@flower_colour, html: { class: 'form-horizontal' }) do |f| %>
+<%= simple_form_for(@flower_colour, html: { class: 'form-horizontal' , :'accept-charset' => "UTF-8"}, defaults: { input_html: { class: 'form-control' } }) do |f| %>
   <% if @flower_colour.errors.any? %>
   <div id="error_explanation">
-    <h2><%= pluralize(@flower_colour.errors.count, "error") %> prohibited this flower_colour from being saved:</h2>
+    <br/>
+    <h4><%= pluralize(@flower_colour.errors.count, "error") %> prohibited this flower colour from being saved:</h4>
     <ul>
     <% @flower_colour.errors.full_messages.each do |msg| %>
       <li><%= msg %></li>
@@ -11,10 +12,10 @@
   <% end %>
   
   <fieldset>
-	  <%= f.input  :name, hint: 'Aim to capture all possible types in about 5-10 different categories.' %>
+	  <%= f.input  :name, autofocus: true %>
+    <br/>
+    <p>Use any of the colours listed <a href="http://www.w3schools.com/cssref/css_colornames.asp" style="font-weight: 700" target="_blank">here</a> and the colour will be displayed whenever the name of the colour is mentioned.</p>
   </fieldset> 
- <br>
-  <p>
-    <%= f.submit %>
-  </p>
+  <hr/>
+  <%= f.submit class: 'btn btn-orange' %>
 <% end %>
