--- a/plantsuwa/app/views/layouts/admin_layout.html.erb
+++ b/plantsuwa/app/views/layouts/admin_layout.html.erb
@@ -15,25 +15,30 @@
         <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
+    <%= stylesheet_link_tag  "application", media: "all", "data-turbolinks-track" => true %>
+    <%= stylesheet_link_tag  "admin-pages", media: "all", "data-turbolinks-track" => true %>
   	<!-- Google Fonts -->
   	<link href='http://fonts.googleapis.com/css?family=Montserrat|Oxygen|Noto+Sans|Nunito' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <%= render 'layouts/navbar' %>
-    <% if is_admin? %>
       <div class="navbar-admin-tab">
-        <%= link_to admin_path do %>
-          <p><i class="fa fa-gavel"></i>&nbsp;&nbsp;Administration</p>
+        <%= link_to current_plants_path do %>
+          <p><i class="fa fa-tree"></i>&nbsp;&nbsp;Plants List</p>
         <%end%>
       </div>
-    <% end %>
+
     <div class="container">
       <div style="height: 64px"></div>
-  	    <%= yield %>
+        <div class="padding-mobile">
+          <%= yield %>
+        </div>
       </div>
     </div>
+    <div style="height: 30px"></div>
     <!-- Uncomment for Debug <%= debug(params) if Rails.env.development? %> -->
+    <%= render 'admin_pages/bottom_tabs_admin' %>
+
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
   </body>
