--- a/plantsuwa/app/views/origins/edit.html.erb
+++ b/plantsuwa/app/views/origins/edit.html.erb
@@ -1,7 +1,10 @@
-<h1> Edit Origin </h1>
+<% provide(:title, 'Edit Origin') %>
+<% provide(:prev_page, 'Origin') %>
+<% provide(:prev_link, origins_path) %>
+
+<h1 class="h1-shrink">Edit Origin</h1>
+<hr/>
 
 <strong>Note that these changes be applied to all plants with this origin.</strong>
 
 <%= render 'form' %>
- 
-<%= link_to 'Back', origins_path, class: 'btn-primary' %>
