--- a/plantsuwa/app/views/origins/index.html.erb
+++ b/plantsuwa/app/views/origins/index.html.erb
@@ -1,21 +1,22 @@
-<h1>Listing Origins</h1>
+<% provide(:title, 'Origins List') %>
+<% provide(:prev_page, 'Admin') %>
+<% provide(:prev_link, admin_path) %> <!-- Change later -->
 
-<%= link_to 'New Origin', new_origin_path %>
 
-<table>
-	<tr>
-		<th>ID</th>
-		<th>Name</th>
-	</tr>
+	<h1 class="h1-shrink">All Origins<span class="item-counter">(<%= @origins.count %>)</span></h1>
+		<%= link_to '<i class="fa fa-plus"></i>&nbsp;&nbsp;New origin'.html_safe, new_origin_path, class: 'btn btn-orange button-shrink', style: 'float: right; margin-top: -45px'%>
+<hr/>
+
+
+<table class="table table-striped table-responsive">
+	<thead>
+		<tr>
+			<th style="width: 5%">ID</th>
+			<th>Name</th>
+			<th style="width: 90px;" class="th-shrink"></th>
+			<th style="width: 90px;" class="th-shrink"></th>
+		</tr>
+	</thead>
 	
-	<% @origins.each do |origin| %>
-	<tr>
-		<td>#<%= origin.id %></td>
-		<td><%= origin.name %></td>
-		<td><%= link_to 'Edit', edit_origin_path(origin) %></td>
-		<td><%= link_to 'Delete', origin_path(origin), method: :delete, data: { confirm: 'WARNING: Are you sure you want to DELETE this Origin? Doing so will affect all plants with this origin!'} %></td>
-	</tr>
-	<% end %>
+	<%= render @origins %>
 </table>
-<br>
-<strong>Total Number of Origins: </strong><%= @origins.count %>
