--- a/plantsuwa/app/views/origins/new.html.erb
+++ b/plantsuwa/app/views/origins/new.html.erb
@@ -1,5 +1,8 @@
-<h1>New Origin</h1>
+<% provide(:title, 'New Origin') %>
+<% provide(:prev_page, 'Origins') %>
+<% provide(:prev_link, origins_path) %>
+
+<h1 class="h1-shrink">New Origin</h1>
+<hr/>
  
 <%= render 'form' %>
- 
-<%= link_to 'Back', origins_path %>
