Still working on the admin interface. The home page looks quite nice now, I think. Still have to do Notifications, Users, Plants, Photos, Sizes, Soil Types, and Types. Now that I have a template in place, it won't take that long.

--- a/plantsuwa/app/assets/stylesheets/custom.css
+++ b/plantsuwa/app/assets/stylesheets/custom.css
@@ -440,7 +440,16 @@ textarea {
   font-family: 'Montserrat', sans-serif; 
 }
 
-.navbar-admin-tab p:hover {
+.navbar-admin-tab:hover p {
+  color: #268BFF;
+  -webkit-transition: color 0.2s linear;
+  -moz-transition: color 0.2s linear;
+  -ms-transition: color 0.2s linear;
+  -o-transition: color 0.2s linear;
+  transition: color 0.2s linear;
+}
+
+.navbar-admin-tab:active p {
   color: #268BFF;
   -webkit-transition: color 0.2s linear;
   -moz-transition: color 0.2s linear;
@@ -495,12 +504,6 @@ textarea {
   background: white;
 }
 
-.circle-large {
-  float: none;
-  display: inline-block;
-  width: 20px;
-  height: 20px;
-}
 
 
 
