--- a/plantsuwa/app/assets/stylesheets/admin-pages.css
+++ b/plantsuwa/app/assets/stylesheets/admin-pages.css
@@ -100,7 +100,11 @@ strong {
 	color: black;
 }
 
-.navbar-admin-tab p:hover {
+.navbar-admin-tab:hover p {
+  color: #FFB300;
+}
+
+.navbar-admin-tab:active p {
   color: #FFB300;
 }
 
@@ -212,7 +216,7 @@ hr {
 .center-wrapper >.center-wrapper-inner > li {
 	display: inline;
 	list-style-type: none;
-	padding-right: 25px;
+	padding: 0;
 	font-size: small;
 }
 
@@ -252,7 +256,118 @@ hr {
 	font-weight: 700;
 }
 
+.circle-large {
+  float: none;
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+}
 
+.circle-xlarge {
+  float: none;
+  display: inline-block;
+  width: 32px;
+  height: 32px;
+  position: absolute;
+  margin-top: 42px;
+  border: 0.5px solid #111;
+}
+
+.form-control-wrapper {
+  margin-left: 42px;
+}
+
+.center-wrapper-inner > li > a {
+  padding: 10px 15px;
+}
+
+.tables-list-wrapper {
+  width: 100%;
+}
+
+.table-list-admin {
+  display: none;
+  width: 100%;
+}
+
+.table-list-admin > table > tbody > tr > td:first-child  {
+  padding-right: 0;
+  width: 30px;
+  text-align: center;
+}
+
+.table-list-admin > table > tbody > tr > td:nth-child(2) > a {
+  width: 100%;
+  display: inline-block;
+} 
+
+.table-list-admin > table > tbody > tr > td:last-child  {
+  width: 80px;
+  text-align: center;
+}
+
+.admin-pages-row {
+  height: 170px;
+  padding: 0 7px;
+}
+
+
+.admin-pages-column {
+  padding: 10px;
+  width: 25%;
+  display: inline-block;
+  height: 100%;
+  margin-right: -4px;
+}
+
+
+.admin-pages-box {
+  background: black;
+  height: 100%;
+  border: 1px solid #111;
+  width: 100%;
+  position: relative;
+}
+
+.apb-1 {  background: url('admin-box-notifications-2.jpg');  background-position: center; }
+.apb-2 {  background: url('admin-box-users-2.jpg');  background-position: center; }
+.apb-3 {  background: url('admin-box-plants-1.jpg');  background-position: center; }
+.apb-4 {  background: url('admin-box-photos-3.jpg');  background-position: center; }
+.apb-5 {  background: url('admin-box-climates-2.jpg');  background-position: center; }
+.apb-6 {  background: url('admin-box-origins-3.jpg');  background-position: center; }
+.apb-7 {  background: url('admin-box-flower-colours-2.jpg');  background-position: center; }
+.apb-8 {  background: url('admin-box-leaf-colours-3.jpg');  background-position: center; }
+.apb-9 {  background: url('admin-box-sizes-1.jpg');  background-position: center; }
+.apb-10 {  background: url('admin-box-soil-types-1.jpg');  background-position: center; }
+.apb-11 {  background: url('admin-box-types-1.jpg');  background-position: center; }
+
+.admin-pages-box:after {
+  content: "";
+  width: 100%;
+  height: 120px;
+  background-color:rgba(255,255,255,0);
+  position: absolute;
+  top: 28px;
+  left: 0;
+  -webkit-transition: background 0.2s linear;
+  -moz-transition: background 0.2s linear;
+  -ms-transition: background 0.2s linear;
+  -o-transition: background 0.2s linear;
+  transition: background 0.2s linear;
+}
+
+.admin-pages-box:hover:after {
+  background-color:rgba(255,255,255,0.2);
+}
+
+.admin-page-heading {
+  position: absolute;
+  left: 0;
+  background: #111;
+  width: 100%;
+  text-align: center;
+  padding: 4px 0;
+}
 
 
 
@@ -263,34 +378,37 @@ hr {
 /* Media Queries */
 
 @media (max-width: 1280px) {
-  .center-wrapper >.center-wrapper-inner > li {
-    padding-right: 18px;
+  .center-wrapper > .center-wrapper-inner > li > a{
+    padding: 10px 10px;
   }
 }
 
 @media (max-width: 1160px) {
-  .center-wrapper >.center-wrapper-inner > li {
-    padding-right: 12px;
+  .center-wrapper > .center-wrapper-inner > li > a{
+    padding: 10px 5px;
   }
 }
 
 @media (max-width: 1060px) {
-  .center-wrapper >.center-wrapper-inner > li {
-    padding-right: 6px;
+  .center-wrapper > .center-wrapper-inner > li > a {
+    padding: 10px 2px;
+  }
+  .center-wrapper > .center-wrapper-inner > li {
     font-size: 12px;
   }
 }
 
 @media (max-width: 910px) {
-  .center-wrapper >.center-wrapper-inner > li {
-    padding-right: 2px;
-    font-size: 12px;
+  .center-wrapper > .center-wrapper-inner > li > a{
+    padding: 10px 0px;
   }
 }
 
 @media (max-width: 850px) {
-  .center-wrapper >.center-wrapper-inner > li {
-    padding-right: 2px;
+  .center-wrapper >.center-wrapper-inner > li > a {
+    padding: 10px -1px;
+  }
+  .center-wrapper > .center-wrapper-inner > li {
     font-size: 11px;
   }
 }
@@ -305,7 +423,20 @@ hr {
   .btn-group > .btn-top {
     width: 90px;
   }
+
+
 }
+
+
+@media (max-width: 992px) {
+  .admin-pages-row {
+    display: none;
+  }
+  .table-list-admin {
+    display: block;
+  }
+}
+
 
 @media (max-width: 500px) {
   .h1-shrink {
