--- a/plantsuwa/app/views/climates/edit.html.erb
+++ b/plantsuwa/app/views/climates/edit.html.erb
@@ -2,9 +2,9 @@
 <% provide(:prev_page, 'Climates') %>
 <% provide(:prev_link, climates_path) %>
 
-<h1 class="h1-shrink">Edit Climate</h1>
+<h1 class="h1-shrink"><span class="preceding-heading"><%= link_to 'Climates', climates_path %> <i class="fa fa-chevron-right"></i></span> Edit '<%= @climate.name %>'</h1>
 <hr/>
 
-<strong>Note that these changes be applied to all plants with this climate.</strong>
+<strong>Note that these changes will be applied to all plants with this climate.</strong>
 
 <%= render 'form' %>
