--- a/plantsuwa/app/views/climates/index.html.erb
+++ b/plantsuwa/app/views/climates/index.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, 'Climates List') %>
 <% provide(:prev_page, 'Admin') %>
-<% provide(:prev_link, admin_path) %> <!-- Change later -->
+<% provide(:prev_link, admin_path) %>
 
 
 	<h1 class="h1-shrink">All Climates<span class="item-counter">(<%= @climates.count %>)</span></h1>
@@ -8,7 +8,7 @@
 <hr/>
 
 
-<table class="table table-striped table-responsive">
+<table class="table table-striped">
 	<thead>
 		<tr>
 			<th style="width: 5%">ID</th>
