--- a/plantsuwa/app/views/climates/new.html.erb
+++ b/plantsuwa/app/views/climates/new.html.erb
@@ -2,7 +2,7 @@
 <% provide(:prev_page, 'Climates') %>
 <% provide(:prev_link, climates_path) %>
 
-<h1 class="h1-shrink">New Climate</h1>
+<h1 class="h1-shrink"><span class="preceding-heading"><%= link_to 'Climates', climates_path %> <i class="fa fa-chevron-right"></i></span> New Climate</h1>
 <hr/>
  
 <%= render 'form' %>
