--- a/plantsuwa/app/views/flower_colours/index.html.erb
+++ b/plantsuwa/app/views/flower_colours/index.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, 'Flower Colours List') %>
 <% provide(:prev_page, 'Admin') %>
-<% provide(:prev_link, admin_path) %> <!-- Change later -->
+<% provide(:prev_link, admin_path) %>
 
 
 	<h1 class="h1-shrink">All Flower Colours<span class="item-counter">(<%= @flower_colours.count %>)</span></h1>
@@ -8,7 +8,7 @@
 <hr/>
 
 
-<table class="table table-striped table-responsive">
+<table class="table table-striped">
 	<thead>
 		<tr>
 			<th style="width: 5%">ID</th>
@@ -21,10 +21,3 @@
 	<%= render @flower_colours %>
 </table>
 
-
-
-<script>
-	<% @flower_colours.each do |col| %>
-		$('#circle-<%= col.id %>').css('background', '<%= (col.name).gsub(/\s+/, '') %>');
-	<% end %>
-</script>
