--- a/plantsuwa/app/views/flower_colours/new.html.erb
+++ b/plantsuwa/app/views/flower_colours/new.html.erb
@@ -2,7 +2,7 @@
 <% provide(:prev_page, 'Flower Colours') %>
 <% provide(:prev_link, flower_colours_path) %>
 
-<h1 class="h1-shrink">New Flower Colour</h1>
+<h1 class="h1-shrink"><span class="preceding-heading"><%= link_to 'Flower Colours', flower_colours_path %> <i class="fa fa-chevron-right"></i></span> New Flower Colour</h1>
 <hr/>
  
 <%= render 'form' %>
