--- a/plantsuwa/app/views/flower_colours/show.html.erb
+++ b/plantsuwa/app/views/flower_colours/show.html.erb
@@ -3,7 +3,7 @@
 <% provide(:prev_link, flower_colours_path) %> <!-- Change later -->
 
 
-	<h1 class="h1-shrink"><span class="preceding-heading"><%= link_to 'Flower Colours', flower_colours_path %> <i class="fa fa-chevron-right"></i></span> <div class="colour-circle circle-large" id="circle"></div><%= @flower_colour.name %></h1>
+	<h1 class="h1-shrink"><span class="preceding-heading"><%= link_to 'Flower Colours', flower_colours_path %> <i class="fa fa-chevron-right"></i></span> <div class="colour-circle circle-large" style="background: <%= (@flower_colour.name).gsub(/\s+/, '') %>"></div><%= @flower_colour.name %></h1>
 		<div class="btn-group">
 
 			<%= link_to edit_flower_colour_path(@flower_colour), class: 'btn-top btn btn-orange button-shrink', style: 'float: left;' do %>
@@ -18,8 +18,3 @@
 
 <p>Plants that are '<%= @flower_colour.name %>':</p>
 <%= render 'admin_pages/plants_table' %>
-
-
-<script>
-	$('#circle').css('background', '<%= (@flower_colour.name).gsub(/\s+/, '') %>');
-</script>
