--- a/plantsuwa/app/views/leaf_colours/_form.html.erb
+++ b/plantsuwa/app/views/leaf_colours/_form.html.erb
@@ -1,7 +1,8 @@
-<%= simple_form_for(@leaf_colour, html: { class: 'form-horizontal' }) do |f| %>
+<%= simple_form_for(@leaf_colour, html: { class: 'form-horizontal' , :'accept-charset' => "UTF-8"}, defaults: { input_html: { class: 'form-control form-control-90' } }) do |f| %>
   <% if @leaf_colour.errors.any? %>
   <div id="error_explanation">
-    <h2><%= pluralize(@leaf_colour.errors.count, "error") %> prohibited this leaf colour from being saved:</h2>
+    <br/>
+    <h4><%= pluralize(@leaf_colour.errors.count, "error") %> prohibited this leaf colour from being saved:</h4>
     <ul>
     <% @leaf_colour.errors.full_messages.each do |msg| %>
       <li><%= msg %></li>
@@ -11,10 +12,31 @@
   <% end %>
   
   <fieldset>
-	  <%= f.input  :name, hint: 'Aim to capture all possible types in about 5-10 different categories.' %>
+
+    <div style="width: 100%">
+      <% if @leaf_colour.new_record? %>
+        <div class="colour-circle circle-xlarge" id="circle"></div>
+      <% else %>
+        <div class="colour-circle circle-xlarge" id="circle" style="background: <%= (@leaf_colour.name).gsub(/\s+/, '') %>"></div>
+      <% end %>
+      <div class="form-control-wrapper">
+  	    <%= f.input  :name, autofocus: true %>
+      </div>
+    </div>
+    <br/>
+    <p>Use any of the colours listed <a href="http://www.w3schools.com/cssref/css_colornames.asp" style="font-weight: 700;" target="_blank">here</a> and the colour will be displayed whenever the name of the colour is mentioned.</p>
   </fieldset> 
- <br>
-  <p>
-    <%= f.submit %>
-  </p>
+  <hr/>
+  <%= f.submit class: 'btn btn-orange' %>
 <% end %>
+
+<script>
+  // Replaces the colour of the circle with the colour in the input, if any. If the colour is not a valid colour, it will show as white.
+
+  $('#leaf_colour_name').keyup(function() {
+    var col = $('#leaf_colour_name').val().replace(/ /g,'');
+    $('#circle').css('background', 'white');
+    $('#circle').css('background', col);
+  });
+</script>
+
