--- a/plantsuwa/app/views/leaf_colours/edit.html.erb
+++ b/plantsuwa/app/views/leaf_colours/edit.html.erb
@@ -1,7 +1,10 @@
-<h1> Edit Leaf Colour </h1>
+<% provide(:title, 'Edit Leaf Colour') %>
+<% provide(:prev_page, 'Leaf Colour') %>
+<% provide(:prev_link, leaf_colours_path) %>
 
-<strong>Note that these changes be applied to all plants with this leaf colour.</strong>
+<h1 class="h1-shrink"><span class="preceding-heading"><%= link_to 'Leaf Colours', leaf_colours_path %> <i class="fa fa-chevron-right"></i></span> Edit '<div class="colour-circle circle-large" style="background: <%= (@leaf_colour.name).gsub(/\s+/, '') %>"></div> <%= @leaf_colour.name %>'</h1>
+<hr/>
+
+<strong>Note that these changes will be applied to all plants with this leaf colour.</strong>
 
 <%= render 'form' %>
- 
-<%= link_to 'Back', leaf_colours_path, class: 'btn-primary' %>
