--- a/plantsuwa/app/views/leaf_colours/new.html.erb
+++ b/plantsuwa/app/views/leaf_colours/new.html.erb
@@ -1,5 +1,8 @@
-<h1>New Leaf Colour</h1>
+<% provide(:title, 'New Leaf Colour') %>
+<% provide(:prev_page, 'Leaf Colours') %>
+<% provide(:prev_link, leaf_colours_path) %>
+
+<h1 class="h1-shrink"><span class="preceding-heading"><%= link_to 'Leaf Colours', leaf_colours_path %> <i class="fa fa-chevron-right"></i></span> New Leaf Colour</h1>
+<hr/>
  
 <%= render 'form' %>
- 
-<%= link_to 'Back', leaf_colours_path %>
