--- a/plantsuwa/app/views/origins/edit.html.erb
+++ b/plantsuwa/app/views/origins/edit.html.erb
@@ -2,9 +2,9 @@
 <% provide(:prev_page, 'Origin') %>
 <% provide(:prev_link, origins_path) %>
 
-<h1 class="h1-shrink">Edit Origin</h1>
+<h1 class="h1-shrink"><span class="preceding-heading"><%= link_to 'Origins', origins_path %> <i class="fa fa-chevron-right"></i></span> Edit '<%= @origin.name %>'</h1>
 <hr/>
 
-<strong>Note that these changes be applied to all plants with this origin.</strong>
+<strong>Note that these changes will be applied to all plants with this origin.</strong>
 
 <%= render 'form' %>
