--- a/plantsuwa/app/views/origins/new.html.erb
+++ b/plantsuwa/app/views/origins/new.html.erb
@@ -2,7 +2,7 @@
 <% provide(:prev_page, 'Origins') %>
 <% provide(:prev_link, origins_path) %>
 
-<h1 class="h1-shrink">New Origin</h1>
+<h1 class="h1-shrink"><span class="preceding-heading"><%= link_to 'Origins', origins_path %> <i class="fa fa-chevron-right"></i></span> New Origin</h1>
 <hr/>
  
 <%= render 'form' %>
